dspublisher/theme/global.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@600&display=swap');
@import './palette.css';

/* These style sheets are fetched from vaadin.com during build (see init.js) */
@import './antlers/assets/css/1-foundation/custom-properties.css';
@import './antlers/assets/css/1-foundation/typography.css';
@import './antlers/assets/css/2-components/links.css';
@import './antlers/assets/css/2-components/button.css';

html {
  --docs-font-family: var(--font-main);
  --docs-font-family-heading: var(--font-header);
  --docs-font-family-monospace: var(--font-code);

  --docs-font-size-2xs: var(--text-size-xs);
  --docs-font-size-xs: calc(var(--text-size-sm) * 0.95);
  --docs-font-size-s: var(--text-size-sm);
  --docs-font-size-m: var(--text-size-md);

  --docs-font-size-h1: var(--text-size-3xl);
  --docs-font-size-h2: var(--text-size-2xl);
  --docs-font-size-h3: var(--text-size-xl);
  --docs-font-size-h4: var(--text-size-lg);
  --docs-font-size-h5: var(--text-size-md);
  --docs-font-size-h6: var(--text-size-sm);

  --docs-font-weight-heading: var(--text-weight-semibold);

  --docs-line-height-s: var(--text-leading-sm);
  --docs-line-height-m: var(--text-leading-md);
  --docs-line-height-l: var(--text-leading-lg);

  --docs-space-2xs: 0.125rem; /* No suitable variable in Antlers */
  --docs-space-xs: var(--space-2xs);
  --docs-space-s: var(--space-xs);
  --docs-space-m: var(--space-sm);
  --docs-space-l: var(--space-base);
  --docs-space-xl: var(--space-md);
  --docs-space-2xl: var(--space-lg);
  --docs-space-3xl: var(--space-xl);

  --docs-layout-max-width: var(--max-width-lg);
  --docs-layout-gutter-width: 1rem;

  --docs-border-radius-s: var(--roundness-sm);
  --docs-border-radius-m: var(--roundness-md);
  --docs-border-radius-l: var(--roundness-lg);
  --docs-border-radius-full: var(--roundness-full);

  --docs-background-color: var(--color-white);
  --docs-header-background-color: var(--docs-background-color);

  --docs-tab-selected-border-width: 1px;

  --docs-heading-text-color: var(--gray-900);
  --docs-body-text-color: var(--gray-700);
  --docs-secondary-text-color: var(--gray-500);
  --docs-tertiary-text-color: var(--gray-450);
  --docs-disabled-text-color: var(--gray-300);

  --docs-divider-color-1: var(--gray-200);
  --docs-divider-color-2: var(--gray-300);

  --docs-link-color: var(--blue-500);
  --docs-visited-link-color: var(--blue-700);

  --docs-admonitionblock-tip-border-color: var(--green-400);
  --docs-admonitionblock-tip-icon-color: var(--green-600);
  --docs-admonitionblock-caution-border-color: var(--yellow-500);
  --docs-admonitionblock-caution-icon-color: var(--yellow-600);
  --docs-admonitionblock-warning-border-color: var(--red-500);
  --docs-admonitionblock-important-border-color: var(--violet-400);
  --docs-admonitionblock-important-icon-color: var(--violet-600);

  --docs-tab-selected-color: var(--blue-400);

  --docs-imageblock-prominent-background-color: var(--indigo-400);
  --docs-imageblock-prominent-color: var(--color-white);

  --docs-example-render-background-color: var(--lumo-base-color, #fff);
}


html[theme~='dark'] {
  --docs-background-color: var(--gray-800);
  --docs-header-background-color: var(--gray-800);

  --docs-heading-text-color: var(--base-white);
  --docs-body-text-color: var(--gray-250);
  --docs-secondary-text-color: var(--gray-350);
  --docs-tertiary-text-color: var(--gray-400);
  --docs-disabled-text-color: var(--gray-500);

  --docs-surface-color-1: var(--gray-750);
  --docs-surface-color-2: var(--gray-700);
  --docs-surface-color-3: var(--gray-650);

  --docs-divider-color-1: var(--gray-600);
  --docs-divider-color-2: var(--gray-550);

  --docs-link-color: var(--blue-400);
  --docs-visited-link-color: var(--blue-300);

  --docs-admonitionblock-tip-border-color: var(--green-700);
  --docs-admonitionblock-tip-icon-color: var(--green-400);
  --docs-admonitionblock-caution-border-color: var(--yellow-600);
  --docs-admonitionblock-caution-icon-color: var(--yellow-500);
  --docs-admonitionblock-warning-border-color: var(--red-500);
  --docs-admonitionblock-important-border-color: var(--violet-500);
  --docs-admonitionblock-important-icon-color: var(--violet-400);

  --docs-tab-selected-color: var(--blue-400);

  --docs-imageblock-prominent-background-color: var(--indigo-500);
  --docs-imageblock-prominent-color: var(--base-white);
}

@media (min-width: 640px) {
  html,
  html[theme~='dark'] {
    --docs-layout-gutter-width: 1.5rem;
  }
}

@media (min-width: 768px) {
  html,
  html[theme~='dark'] {
    --docs-layout-gutter-width: 2rem;
  }
}

/* Override Lumo theme using a more specific selector than 'html' */
:root {
  background-color: var(--docs-background-color);
  color: var(--docs-body-text-color);
}

html .card.card {
  background-color: var(--docs-surface-color-2);
  border-color: var(--docs-divider-color-1);
}

::-moz-selection {
  --docs-text-selection-background-color: var(--text-selection-background);
  --docs-text-selection-color: var(--text-selection-text);
}

::selection {
  --docs-text-selection-background-color: var(--text-selection-background);
  --docs-text-selection-color: var(--text-selection-text);
}

[class*='docsHeader-'] {
  box-shadow: inset 0 -1px 0 0 var(--docs-divider-color-1);
}

/* Hilla header */

/* Prevent layout shift while the web component is loading */
dspublisher-header {
  display: block;
  min-height: 4rem; /* Match the height of .hilla-header */
  background-color: var(--docs-header-background-color);
}

.hilla-header--nav > li > a:any-link {
  color: var(--docs-body-text-color);
}

.hilla-header--nav > li > a:any-link:hover {
  color: var(--docs-heading-text-color);
}

.hilla-header-wrapper * {
  box-sizing: border-box;
}

.hilla-header {
  height: 4rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.hilla-header--container {
  width: 100%;
  max-width: var(--docs-layout-max-width);
  margin: 0 auto;
  padding: 0 var(--docs-layout-gutter-width);
}

.hilla-header--logo {
  display: flex;
  align-items: center;
}

.hilla-header--nav {
  margin-left: 1.5rem;
  list-style: none;
  display: flex;
  align-items: center;
  overflow-x: auto;
}

@media (min-width: 768px) {
  .hilla-header--nav {
    overflow: hidden;
  }
}

.hilla-header--nav > li > a {
  padding: 0 0.75rem;
  display: inline-block;
  color: var(--gray-250);
  font-weight: 400;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 0.15s;
  transition-property: color;
}

.hilla-header--nav > li > a:hover {
  color: var(--base-white);
  text-decoration: none;
}

/* li.nav-footer-start {
  border-top: 1px solid var(--docs-divider-color-1);
  margin-top: var(--docs-space-2xl);
  padding-top: var(--docs-space-m);
} */

/* Custom "flat" styled navigation hierarchy */

li.flat:not(:first-child) {
  margin-top: var(--docs-space-xl);
}

li.flat > [class*=title] {
  font-weight: var(--docs-font-weight-strong);
  padding-inline-start: var(--docs-space-l);
  padding-inline-end: var(--docs-space-2xs);
  color: var(--docs-heading-text-color);
}

li.flat > div > [class*=toggleButton] {
  order: 1;
  transition: all 120ms;
}

li.flat > div:not(:hover, :focus-within) > [class*=toggleButton] {
  opacity: 0;
}

li.flat > ul[class] {
  margin-inline-start: 0;
}

[class*='menuItem'].commercial > div > a::after,
.section-outline dt.commercial::after,
.cards .sect2.commercial h3::after,
.admonitionblock.note.commercial .icon::before {
  content: '$';
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 1em;
  vertical-align: 0.15em;
  width: 16px;
  height: 16px;
  font-size: 10px;
  line-height: 12px;
  font-weight: 600;
  background-color: var(--violet-600);
  color: white;
  font-family: inherit;
}

[class*='menuItem'].commercial > div > a::after,
.section-outline dt.commercial::after,
.cards .sect2.commercial h3::after {
  margin-inline-start: 0.7em;
  color: var(--docs-background-color);
  background-color: var(--violet-400);
}

.cards .sect2.commercial h3::after {
  vertical-align: 0.3em;
}


a.button.primary.water {
  color: var(--button-text-color);
}

